--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ pandas==2.1.1
 streamlit==1.25.0
 plotly==5.17.0
 seaborn==0.12.2
-numpy==1.25.2
-pypinyin==0.48.0
+numpy>=1.26.0
+setuptools>=58.0.0
+wheel
+pypinyin
