--- a/requirements.txt
+++ b/requirements.txt
@@ -60,4 +60,6 @@ Send2Trash==1.8.3
 setuptools==70.0.0
 streamlit==1.5.0
 numpy==1.24.3
-plotly==5.14.0
+plotly==5.17.0
+pandas==2.1.1
+geopandas==0.10.2
